--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ authors = ["illumination-k <illumination.k.27@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 anndata = "^0.7.6"
+pandas = "^1.2.4"
+numpy = "^1.20.3"
+matplotlib = "^3.4.2"
+seaborn = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
