--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = ""
 authors = ["illumination-k <illumination.k.27@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.10"
 anndata = "^0.7.6"
 pandas = "^1.2.4"
 numpy = "^1.20.3"
 matplotlib = "^3.4.2"
 seaborn = "^0.11.1"
+scipy = "^1.6.3"
+scanpy = "^1.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
